--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
 <body>
-  <app-root></app-root>
+  
+  <app-root>
+  
+  </app-root>
 </body>
+<footer style="background-color: rgb(10, 121, 10); color: beige;height:100px;display: flex;justify-content: center;align-items: center;height: 100px;">
+  <p > CREATED BY İLHAN CÜVELEK</p>
+</footer>
 </html>
